aws/files/installer/yamls/funnel-tes-service.template.yaml
apiVersion: v1
kind: Service
metadata:
  name: tes-service
  namespace: ${TES_NAMESPACE}
  labels:
    app: funnel
  annotations: {}
spec:
  type: ClusterIP
  ports:
    - port: ${FUNNEL_PORT}
      targetPort: ${FUNNEL_PORT}
      protocol: TCP
      name: http
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: rpc
  selector:
    app: funnel
