aws/files/installer/yamls/funnel-tes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tes-service
  namespace: funnel
  labels:
    app: funnel
  annotations: {}
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
    - port: 9090
      targetPort: 9090
      protocol: TCP
      name: rpc
  selector:
    app: funnel
