aws/files/installer/yamls/tes-ingress-alb.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tes-ingress
  namespace: ${TES_NAMESPACE}
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":${FUNNEL_PORT}}]'
spec:
  ingressClassName: "alb"
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tes-service
                port:
                  number: ${FUNNEL_PORT}
